# AI-Podcast-Clip-Cutter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  README_MANAGER.md  analyze_virals.py  benchmark.py  content_classifier.py  cutter.py  docker-compose.yml  download_content.py  gemini_transport.py  local_scoring.py  main.py  manager.py  pyproject.toml  requirements-airflow.txt  requirements.txt  review_dashboard.py  semantic_clip_director.py  subtitler.py  subtitler_checker.py  transcribe.py  transcribe_podcast.py
benchmarks/: NEW_CASE_WORKFLOW.md  README.md  REVIEW_RESET.md  cases.example.json  cases.json  human_review_template.csv  old_cases.json.bak  report.md  review_dashboard.html
diarization/: base.py  heuristic_backend.py
docs/: ARCHITECTURE.md  CLIP_REVIEW_AGENT.md  DEMO.md  ENGINEERING_DECISIONS.md  EXTERNAL_MODELS_PLAN.md  FRONTEND_REDESIGN_PLAN.md  LANGGRAPH_REVIEW.md  PIPELINE_SERVICES.md  PORTFOLIO.md  PROJECT_FLOW.md  REACT_FRONTEND.md  REPO_MAP.md
examples/: top_windows.example.json
layout/: __init__.py  base.py
providers/: __init__.py  transcription_provider.py  video_understanding_provider.py
scripts/: dev_api.ps1  dev_full_stack.ps1  dev_web.ps1  import_local_project.ps1  run_tests.ps1
strategies/: __init__.py  base.py
tests/: test_add_benchmark_case.py  test_airflow_orchestration.py  test_api_persistence.py  test_benchmark.py  test_boundary_refinement.py  test_clean_review_artifacts.py  test_content_classifier.py  test_cutter_tracking.py  test_download_content.py  test_gemini_sdk_contract.py  test_langgraph_review.py  (+15 more)
(+110 files in other folders)
